ci(workflow): 添加 MSBuild 设置步骤并忽略日志压缩文件
在 GitHub Actions 工作流中添加 MSBuild 设置步骤以确保构建环境完整
同时将日志压缩文件添加到 .gitignore 以避免误提交

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Setup NuGet
         uses: nuget/setup-nuget@v1
 
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+
       - name: Restore packages
         run: nuget restore shadowsocks-csharp.sln
 
