ci(workflow): 分离.NET 2.0和4.0客户端的构建流程
修改release.yml工作流，将原本统一的构建步骤拆分为针对.NET 2.0和4.0客户端的独立构建任务。为.NET 4.0构建添加了FrameworkPathOverride环境变量配置

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,14 @@ jobs:
       - name: Restore packages
         run: nuget restore shadowsocks-csharp.sln
 
-      - name: Build Release binaries
-        run: msbuild shadowsocks-csharp.sln /p:Configuration=Release /p:Platform=AnyCPU /m
+      - name: Build .NET 2.0 client
+        run: msbuild shadowsocks-csharp/shadowsocks-csharp.csproj /p:Configuration=Release /p:Platform=AnyCPU /m
+
+      - name: Build .NET 4.0 client
+        shell: pwsh
+        run: |
+          $env:FrameworkPathOverride = 'C:\Windows\Microsoft.NET\Framework\v4.0.30319'
+          msbuild shadowsocks-csharp/shadowsocks-csharp4.0.csproj /p:Configuration=Release /p:Platform=AnyCPU /m
 
       - name: Package artifacts
         shell: pwsh
